--- a/FlappyBird/MainWindow.xaml
+++ b/FlappyBird/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FlappyBird"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<Canvas>
+	<Canvas Name="MyCanvas" Focusable="True" KeyDown="KeyIsDown" KeyUp="KeyIsUp">
 		<Canvas.Background>
 			<ImageBrush ImageSource="/hatter.jpg"/>
 		</Canvas.Background>
@@ -24,6 +24,8 @@
 		<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="714" Canvas.Top="-249"/>
 
 		<Image Name="madar" Source="/flappyBird.png" Height="36" Width="50" Stretch="Fill" Canvas.Left="0" Canvas.Top="185"/>
+
+		<Label Name="lbl_Score" FontSize="22" FontWeight="ExtraBold" Content="Score :0"/>
 
 	</Canvas>
 </Window>
