--- a/FlappyBird/MainWindow.xaml
+++ b/FlappyBird/MainWindow.xaml
@@ -23,7 +23,7 @@
 			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="obs1" Canvas.Left="714" Canvas.Top="283"/>
 			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="714" Canvas.Top="-249"/>
 
-		<Image Name="madar" Source="/flappyBird.png" Height="36" Width="50" Stretch="Fill" Canvas.Left="0" Canvas.Top="190"/>
+			<Image Name="madar" Source="/flappyBird.png" Height="36" Width="50" Stretch="Fill" Canvas.Left="0" Canvas.Top="190"  Panel.ZIndex="100"/>
 
 		<Label Name="lbl_Score" FontSize="22" FontWeight="ExtraBold" Content="Score :0" Canvas.Left="10" Canvas.Top="10"/>
 
