--- a/FlappyBird/MainWindow.xaml
+++ b/FlappyBird/MainWindow.xaml
@@ -8,20 +8,20 @@
         Title="MainWindow" Height="450" Width="800">
 
 	<Grid>
-		<Canvas Name="MyCanvas" Focusable="True" KeyDown="KeyIsDown" KeyUp="KeyIsUp" Background="SkyBlue"  Width="800" Height="450">
-		
+		<Canvas Name="MyCanvas" Focusable="True" KeyDown="KeyIsDown" KeyUp="KeyIsUp" Background="SkyBlue"  Width="800" Height="500">
 
-		<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="obs1" Canvas.Left="106" Canvas.Top="262"/>
-		<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="106" Canvas.Top="-270"/>
 
-			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="obs1" Canvas.Left="310" Canvas.Top="239"/>
-			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="310" Canvas.Top="-292"/>
+			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="pipeBottom" Canvas.Left="106" Canvas.Top="262"/>
+			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="pipeTop" Canvas.Left="106" Canvas.Top="-270"/>
 
-			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="obs1" Canvas.Left="522" Canvas.Top="320"/>
-			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="522" Canvas.Top="-212"/>
+			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="pipeBottom" Canvas.Left="310" Canvas.Top="239"/>
+			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="pipeTop" Canvas.Left="310" Canvas.Top="-292"/>
 
-			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="obs1" Canvas.Left="714" Canvas.Top="283"/>
-			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="obs1" Canvas.Left="714" Canvas.Top="-249"/>
+			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="pipeBottom" Canvas.Left="522" Canvas.Top="320"/>
+			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="pipeTop" Canvas.Left="522" Canvas.Top="-212"/>
+
+			<Image Height="390" Width="66" Source="/pipeBottom.png" Tag="pipeBottom" Canvas.Left="714" Canvas.Top="283"/>
+			<Image Height="390" Width="66" Source="/pipeTop.png" Tag="pipeTop" Canvas.Left="714" Canvas.Top="-249"/>
 
 			<Image Name="madar" Source="/flappyBird.png" Height="36" Width="50" Stretch="Fill" Canvas.Left="0" Canvas.Top="190"  Panel.ZIndex="100"/>
 
